force-app/main/default/src/objects/PJN_Adverse_Event__c/PJN_Adverse_Event__c.object-meta.xml
<CustomObject>
    <label>Adverse Event</label>
    <nameField>
        <displayFormat>AE-{000000}</displayFormat>
        <label>AE Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adverse Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>