force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Additional_Documents_Available__c.field-meta.xml
<CustomField>
    <fullName>PJN_Additional_Documents_Available__c</fullName>
    <description>E2B (R2): A.1.8.1, additionaldocument (1N)

E2B (R3): C.1.6.1 Are Additional Documents Available?
User Guidance: When retransmitting information, the sender (retransmitter) indicates
‘true’ in this data element only if they have the documents available.
Conformance: Required
Data Type: Boolean
OID: None
Value Allowed: false, true</description>
    <inlineHelpText>User Guidance: When retransmitting information, the sender (retransmitter) indicates
‘true’ in this data element only if they have the documents available.</inlineHelpText>
    <label>Additional Documents Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Yes_No</valueSetName>
    </valueSet>
</CustomField>