force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Autopsy_Done__c.field-meta.xml
<CustomField>
    <fullName>PJN_Autopsy_Done__c</fullName>
    <description>E2B (R2): B.1.9.3, patientautopsyyesno (1N)

E2B (R3): D.9.3 Was Autopsy Done?
Conformance: Optional, but required if D.9.1 is populated.
Data Type: Boolean
OID: None
Value Allowed:
false
true
nullFlavor: ASKU, NASK, UNK</description>
    <label>Autopsy Done?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Yes_No</valueSetName>
    </valueSet>
</CustomField>