force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Case__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related interaction that found this AE.  A lookup so that security and archival can be controlled separately from the case as AEs are very sensitive.</description>
    <label>Interaction</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Adverse Events</relationshipLabel>
    <relationshipName>PJN_Adverse_Events</relationshipName>
    <type>Lookup</type>
</CustomField>