force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Case_Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Thread_ID__c</fullName>
    <description>Formula to generate the Interaction&apos;s Thread ID, which is used to relate an incoming email to the Interaction using email-to-case.</description>
    <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,4) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT( PJN_Case__c ,5) &amp; SUBSTITUTE(Left(RIGHT(PJN_Case__c,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(PJN_Case__c,5) &amp; &quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to generate the Interaction&apos;s Thread ID, which is used to relate an incoming email to the Interaction using email-to-case.</inlineHelpText>
    <label>Interaction Thread ID</label>
    <type>Text</type>
</CustomField>