force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Concomitant_Therapies__c.field-meta.xml
<CustomField>
    <fullName>PJN_Concomitant_Therapies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E2B (R2): NA

E2B (R3): D.7. 3 Concomitant Therapies
Conformance: Optional
Data Type: Boolean
OID: None
Value Allowed: True</description>
    <inlineHelpText>When this data element is set to ‘true’, details should be provided in the narrative Section.</inlineHelpText>
    <label>Concomitant Therapies</label>
    <type>Checkbox</type>
</CustomField>