force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Country__c.field-meta.xml
<CustomField>
    <fullName>PJN_Country__c</fullName>
    <description>Country for the AE. Used for sharing.

E2B Mapping: A.1.1, primarysourcecountry, 2A</description>
    <inlineHelpText>Country for the AE.</inlineHelpText>
    <label>Primary Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Countries</valueSetName>
    </valueSet>
</CustomField>