force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Country_of_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>PJN_Country_of_Occurrence__c</fullName>
    <description>E2B (R2): A.1.2, occurcountry, (2A)

E2B (R3): Moved to E.i.9 (AE Reaction)</description>
    <label>Country of Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Countries</valueSetName>
    </valueSet>
</CustomField>