force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_of_Death__c</fullName>
    <description>E2B (R2): B.1.9.1a, patientdeathdateformat (3N) --&gt; Value should be 102 AND B.1.9.1b, patientdeathdate (8N) --&gt; convert to CCYYMMDD

E2B (R3): D.9.1 Date of Death
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
See Appendix II for further information
nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date patient died.</inlineHelpText>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>