force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Time_Closed__c</fullName>
    <description>Tracks the date and time that the AE was closed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tracks the date and time that the AE was closed.</inlineHelpText>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>