force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Date_Time_Submitted__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Time_Submitted__c</fullName>
    <description>The date/time the AE was submitted to PV</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/Time Submitted</label>
    <type>DateTime</type>
</CustomField>