force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Display_Name__c</fullName>
    <description>Display in Tab</description>
    <formula>Name &amp;&quot; - &quot;&amp; TEXT(PJN_Date_of_Awareness__c)</formula>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>