force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Due_Date__c</fullName>
    <description>Date &amp; Time this AE is due to be closed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date &amp; Time this AE is due to be closed.</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>