force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Email_To_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Email_To_Address__c</fullName>
    <description>Contains list of email addresses of local PV to send the email. This is set based on the local settings.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contains list of email addresses of local PV to send the email. This is set based on the local settings.</inlineHelpText>
    <label>Email To Address</label>
    <type>TextArea</type>
</CustomField>