force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Escalated__c.field-meta.xml
<CustomField>
    <fullName>PJN_Escalated__c</fullName>
    <formula>IF( PJN_Is_Escalated__c , IMAGE(&quot;/resource/med_globalassets/icons/arrowup_green_20x20.png&quot;, &quot;Escalated&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalated?</label>
    <type>Text</type>
</CustomField>