force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_ICSR_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_ICSR_Batch_Number__c</fullName>
    <description>Batch number for the ICSR report generated for this Adverse Event.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ICSR Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>