force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>PJN_Integration_Message__c</fullName>
    <description>Message returned from E2B integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>