force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Integration_Status__c</fullName>
    <description>Status of integration with system to process E2B file.</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>