force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Escalated__c</fullName>
    <description>Indicates if the the AE is currently escalated to another user. Calculated by checking if the AE owner is different than the Interaction owner.</description>
    <formula>IF(ISPICKVAL(PJN_Status__c, &quot;Closed&quot;)||ISPICKVAL(PJN_Status__c, &quot;Cancelled&quot;),
FALSE,
IF( OwnerId !=  PJN_Case__r.OwnerId  ,
TRUE,
FALSE
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the AE is currently escalated to another user.</inlineHelpText>
    <label>Is Escalated</label>
    <type>Checkbox</type>
</CustomField>