force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Legal_Hold__c.field-meta.xml
<CustomField>
    <fullName>PJN_Legal_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the record cannot be modified, anonymized, or deleted because there is a legal hold</description>
    <inlineHelpText>Indicates that the record cannot be modified, anonymized, or deleted because there is a legal hold</inlineHelpText>
    <label>Legal Hold</label>
    <type>Checkbox</type>
</CustomField>