force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_List_of_Documents_Held__c.field-meta.xml
<CustomField>
    <fullName>PJN_List_of_Documents_Held__c</fullName>
    <description>E2B (R2): A.1.8.2, documentlist (100AN)

E2B (R3): C.1.6.1.r.1 Documents Held by Sender
User Guidance: A description of the documents held by the sender relevant to this ICSR
(e.g. clinical records, hospital records, autopsy reports, ECG strips, chest
X-ray, or photographs) should be listed individually in this data element.
Conformance Optional, but required if C.1.6.1 is ‘true’.
Data Type: 2000AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: A description of the documents held by the sender relevant to this ICSR
(e.g. clinical records, hospital records, autopsy reports, ECG strips, chest
X-ray, or photographs) should be listed individually in this data element.</inlineHelpText>
    <label>List of Documents Held</label>
    <length>100</length>
    <type>Text</type>
</CustomField>