force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Locked__c.field-meta.xml
<CustomField>
    <fullName>PJN_Locked__c</fullName>
    <formula>PJN_Is_Closed__c ||  PJN_Legal_Hold__c || (!ISBLANK(TEXT(PJN_Integration_Status__c)) &amp;&amp; TEXT(PJN_Integration_Status__c) != &apos;Rejected&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>