force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_MedDRA_Autopsy_Cause_of_Death__c.field-meta.xml
<CustomField>
    <fullName>PJN_MedDRA_Autopsy_Cause_of_Death__c</fullName>
    <description>E2B (R2): B.1.9.4a, patientdetermautopsmeddraversion (8AN)

E2B (R3): D.9.4.r.1a MedDRA Version for Autopsy-determined Cause(s) of Death
Conformance: Optional, but required if D.9.4.r.1b is populated.
Data Type: 4AN
OID: None
Value Allowed: Numeric and ‘. ‘(dot)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>MedDRA terms should be used where applicable.</inlineHelpText>
    <label>MedDRA Version Autopsy Cause of Death</label>
    <length>4</length>
    <type>Text</type>
</CustomField>