force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Parent_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Birthdate__c</fullName>
    <description>E2B (R2): B.1.10.2.1a, parentbirthdateformat (3N) --&gt; Value should be 102 AND B.1.10.2.1b, parentbirthdate (8N) --&gt; convert to CCYYMMDD

E2B (R3): D.10.2.1 Date of Birth of Parent
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date of birth should be used if the precise birthday is known; otherwise the age
should be used.</inlineHelpText>
    <label>Parent Birthdate</label>
    <type>Date</type>
</CustomField>