force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Parent_Gender__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Gender__c</fullName>
    <description>E2B (R2): B.1.10.6, parentsex (1N)

E2B (R3): D.10.6 Sex of Parent
Conformance: Required if any data element in D.10 section is populated.
Data Type: 1N
OID: 1.0.5218
Value Allowed:
1=Male
2=Female
nullFlavor: UNK, MSK, ASKU, NASK</description>
    <inlineHelpText>The sex of the parent</inlineHelpText>
    <label>Parent Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>