force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Parent_Height__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Height__c</fullName>
    <description>E2B (R2): B.1.10.5, parentheight (3N)

E2B (R3): D.10.5 Height (cm) of Parent
Conformance: Optional
Data Type: 3N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>Height of parent in cm</inlineHelpText>
    <label>Parent Height (cm)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>