force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Parent_Identification__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Identification__c</fullName>
    <description>E2B (R2): B.1.10.1, parentidentification (10AN)

E2B (R3): D.10.1 Parent Identification
Conformance: Optional
Data Type: 60AN
OID: None
Value Allowed:
Free text
nullFlavor: MSK, ASKU, NASK, UNK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This section should be used in the case of a parent-child or parent-fetus report where
the parent had no reaction or event.</inlineHelpText>
    <label>Parent Identification</label>
    <length>60</length>
    <type>Text</type>
</CustomField>