force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Parent_Last_Menstrual_Period__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Last_Menstrual_Period__c</fullName>
    <description>E2B (R2): B.1.10.3a, parentlastmenstrualdateformat (3N) --&gt; Value should be 102 AND B.1.10.3b, parentlastmenstrualdate (8N) --&gt; convert to CCYYMMDD

E2B (R3): D.10.3 Last Menstrual Period Date of Parent
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
See Appendix II for further information. nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A full precision date should be used.</inlineHelpText>
    <label>Parent Last Menstrual Period</label>
    <type>Date</type>
</CustomField>