force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Parent_Relevant_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Relevant_Medical_History__c</fullName>
    <description>E2B (R2): B.1.10.7.2, parentmedicalrelevanttext (10000AN)

E2B (R3): D.10.7.2 Text for Relevant Medical History and Concurrent Conditions of Parent
Conformance: Optional
Data Type: 10000AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Text for relevant medical history and concurrent conditions of parent (not including reaction/event).</inlineHelpText>
    <label>Parent Relevant Medical History</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>