force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Parent_Weight__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_Weight__c</fullName>
    <description>E2B (R2): B.1.10.5, parentweight (6N)

E2B (R3): D.10.4 Body Weight (kg) of Parent
Conformance: Optional
Data Type: 6N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>The weight of the parent in kg</inlineHelpText>
    <label>Parent Weight (kg)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>