force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Age__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Age__c</fullName>
    <description>E2B (R2): B.1.2.2a, patientonsetage, (5N)

E2B (R3): D.2.2a Age at Time of Onset of Reaction / Event (number)
Conformance: Optional, but required if D.2.2b is populated.
Data Type: 5N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>If several reactions/events are in the report, use the age at the time of the first reaction/event. For fetal reactions/events,use the Gestation period when reaction/event was observed in the fetus.</inlineHelpText>
    <label>Patient Age</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>