force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Age_Group__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Age_Group__c</fullName>
    <description>E2B (R2): B.1.2.3, patientagegroup (1N)

E2B (R3): D.2.3 Patient Age Group (as per reporter)
Conformance: Optional
Data Type: 1N
OID: 2.16.840.1.113883.3.989.2.1.1.9
Value Allowed:
0=Foetus
1=Neonate (Preterm and Term newborns) 2=Infant
3=Child
4=Adolescent
5=Adult
6=Elderly</description>
    <inlineHelpText>This section should be completed only when the age is not provided more specifically.</inlineHelpText>
    <label>Patient Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>