force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Age_Unit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Age_Unit__c</fullName>
    <description>E2B (R2): B.1.2.2b, patientonsetageunit (3N)

E2B (R3): D.2.2bAge at Time of Onset of Reaction / Event (unit)
Conformance: Optional, but required if D.2.2a is populated.
Data Type: 50AN
OID: 2.16.840.1.113883.3.989.2.1.1.26
Value Allowed:
UCUM codes for Year, Month, Week, Day, and Hour: {Decade}</description>
    <inlineHelpText>When providing the age in decades,please note that, for example, the 7th decade refers to a person in their 60’s</inlineHelpText>
    <label>Patient Age Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Time_Units</valueSetName>
    </valueSet>
</CustomField>