force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Birthdate__c</fullName>
    <description>E2B (R2): B.1.2.1a, patientbirthdateformat (3N) --&gt; Value should be 102 AND B.1.2.1b, patientbirthdate (8N) --&gt; convert to CCYYMMDD

E2B (R3): D.2.1 Date of Birth
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
See Appendix II for further information. nullFlavor: MSK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A full precision date should be used (i.e., day, month, year). If the full date of birth is
unknown, an approximate age can be used</inlineHelpText>
    <label>Patient Birthdate</label>
    <type>Date</type>
</CustomField>