force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Gender__c</fullName>
    <description>E2B (R2): B.1.5, patientsex (1N)

E2B (R3): D.5 Sex
Conformance: Optional
Data Type: 3N
OID: None
Value Allowed: Numeric</description>
    <label>Patient Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>