force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Gestation_Period__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Gestation_Period__c</fullName>
    <description>E2B (R2): B.1.2.2.1a, gestationperiod (3N)

E2B (R3): Gestation Period When Reaction / Event Was Observed in the Foetus (number)
Conformance: Optional, but required if D.2.2.1b is populated.
Data Type: 3N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>Gestation period when reaction or event was observed in the fetus.</inlineHelpText>
    <label>Patient Gestation Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>