force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Gestation_Period_Unit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Gestation_Period_Unit__c</fullName>
    <description>E2B (R2): B.1.2.2.1b, gestationperiodunit (3N)

E2B (R3): D.2.2.1b Gestation Period When Reaction/Event Was Observed in the Foetus (unit)
Conformance: Optional, but required if D.2.2.1a is populated.
Data Type: 50AN
OID: 2.16.840.1.113883.3.989.2.1.1.26
Value Allowed:
UCUM codes for Month, Week, and Day:{Trimester}</description>
    <inlineHelpText>Gestation period when reaction or event was observed in the fetus.</inlineHelpText>
    <label>Patient Gestation Period Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Time_Units</valueSetName>
    </valueSet>
</CustomField>