force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Height__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Height__c</fullName>
    <description>E2B (R2): B.1.4, patientheight (3N)

E2B (R3): D.4 Height (cm)
Conformance: Optional
Data Type: 3N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>This data element captures the reported height of the patient in centimetres at the time of the event/reaction.</inlineHelpText>
    <label>Patient Height (cm)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>