force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Identification__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Identification__c</fullName>
    <description>E2B (R2): B.1.1, patientinitial (10AN)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The identification of the patient may be prohibited by certain national confidentiality
laws or directives. The information should be provided when it is in conformance with the
confidentiality requirements.</inlineHelpText>
    <label>Patient Identification</label>
    <length>10</length>
    <type>Text</type>
</CustomField>